--- a/app/assets/stylesheets/revised/pages/organized/messages_and_abandoned.scss
+++ b/app/assets/stylesheets/revised/pages/organized/messages_and_abandoned.scss
@@ -1,6 +1,10 @@
 // NOTES: "messages" should be renamed to "records", since that is generic and will work for both
 .organized-messages,
 .organized-records {
+  @include media-breakpoint-down(md) {
+    line-height: 1.25;
+  }
+
   #map {
     width: 100%;
     height: 400px;
@@ -9,11 +13,6 @@
 
   // table rows are rendered when you click on a point on the map too - only show the map link when on the table
   .map-cell {
-    display: none;
-  }
-
-  // We don't want to display extended-col-info except on the main table, when the screen is small
-  .extended-col-info {
     display: none;
   }
 
@@ -35,25 +34,7 @@
         }
       }
     }
-
-    // For small tables, we want to just have two cells, so that it isn't too wide for the page
-    @include media-breakpoint-down(md) {
-      line-height: 1.25;
-
-      .extended-col-info {
-        display: inline-block;
-      }
-
-      .msgbikelink {
-        display: block;
-      }
-
-      .hidden-sm-cells {
-        display: none;
-      }
-    }
   }
-
   #placeSearch {
     max-width: 60%;
     display: none;
@@ -70,5 +51,26 @@
     margin: 9px 9px 0 0;
     border-radius: 1px;
     padding: 0.6rem;
+  }
+}
+
+// We don't want to display extended-col-info except on the main table, when the screen is small
+.extended-col-info {
+  display: none;
+}
+// For small tables, we want to just have two cells, so that it isn't too wide for the page
+// This is outside of the above scope because it is also shown on non-organized pages
+@include media-breakpoint-down(md) {
+  .extended-col-info {
+    line-height: 1.25;
+    display: inline-block;
+  }
+
+  .msgbikelink {
+    display: block;
+  }
+
+  .hidden-sm-cells {
+    display: none;
   }
 }
