--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -52,9 +52,6 @@
                 - if passive_organization.enabled?("impound_bikes")
                   %li
                     = link_to t(".org_impounded_bikes", org_name: passive_organization.short_name), organization_bikes_path(organization_id: passive_organization.to_param, search_impoundedness: "only_impounded"), class: "nav-link #{on_impound_bikes_path ? 'active' : ''}"
-                - if passive_organization.enabled?("abandoned_bikes")
-                  %li
-                    = active_link t(".org_abandoned_bikes", org_name: passive_organization.short_name), organization_parking_notifications_path(organization_id: passive_organization.to_param), class: "nav-link"
                 %li
                   = active_link t(".add_a_bike"), new_organization_bike_path(passive_organization.to_param), class: "nav-link"
                 - if passive_organization.enabled?("show_partial_registrations")
@@ -70,6 +67,10 @@
                     = active_link bulk_link_name, organization_bulk_imports_path(organization_id: passive_organization.to_param), match_controller: true, class: "nav-link"
                 - if passive_organization.lightspeed_pos?
                   = active_link t(".lightspeed_integration_panel"), lightspeed_interface_path, class: "nav-link"
+                - if passive_organization.enabled?("parking_notifications")
+                  %li.divider-nav-item
+                  %li
+                    = active_link t(".parking_notifications"), organization_parking_notifications_path(organization_id: passive_organization.to_param), class: "nav-link"
                 - if passive_organization.enabled?("bike_stickers")
                   %li.divider-nav-item
                   %li
@@ -77,16 +78,6 @@
                 - if passive_organization.enabled?("csv_exports")
                   %li
                     = active_link t(".exports"), organization_exports_path(organization_id: passive_organization.to_param), match_controller: true, class: "nav-link"
-                - if passive_organization.message_kinds.any?
-                  %li.divider-nav-item
-                  - passive_organization.message_kinds.each_with_index do |message_kind, index|
-                    %li
-                      / (params[:kind] == message_kind ? "active" : "")
-                      - if message_kind == "geolocated_messages"
-                        - link_title = "GeoMessaging"
-                      - else
-                        - link_title = message_kind.gsub("_messages", "").titleize
-                      = active_link link_title, organization_messages_path(organization_id: passive_organization.to_param, kind: message_kind), class: "nav-link"
                 - if current_user.admin_of?(passive_organization) || current_user.superuser?
                   %li.divider-nav-item
                   %li
