and add bike search

--- a/app/views/organized/parking_notifications/_table.html.haml
+++ b/app/views/organized/parking_notifications/_table.html.haml
@@ -3,7 +3,7 @@
 - skip_repeat ||= false
 - render_address ||= false
 
-%table.table.table-striped.table-bordered.table-sm.without-exterior-border.list-table#notificationsTable
+%table.table.table-striped.table-bordered.table-sm.without-exterior-border.list-table#recordsTable
   %thead.small-header.hidden-md-down
     - unless skip_map_cell
       %th.map-cell
