--- a/app/assets/stylesheets/revised/pages/organized/parking_notifications.scss
+++ b/app/assets/stylesheets/revised/pages/organized/parking_notifications.scss
@@ -12,11 +12,6 @@
     display: none;
   }
 
-  // We don't want to display extended-col-info except on the main table, when the screen is small
-  .extended-col-info {
-    display: none;
-  }
-
   .list-table {
     .map-cell {
       display: table-cell;
@@ -35,22 +30,11 @@
         }
       }
     }
+  }
 
-    // For small tables, we want to just have two cells, so that it isn't too wide for the page
+  table {
     @include media-breakpoint-down(md) {
       line-height: 1.25;
-
-      .extended-col-info {
-        display: inline-block;
-      }
-
-      .msgbikelink {
-        display: block;
-      }
-
-      .hidden-sm-cells {
-        display: none;
-      }
     }
   }
 
@@ -70,5 +54,26 @@
     margin: 9px 9px 0 0;
     border-radius: 1px;
     padding: 0.6rem;
+  }
+}
+
+// We don't want to display extended-col-info except on the main table, when the screen is small
+.extended-col-info {
+  display: none;
+}
+// For small tables, we want to just have two cells, so that it isn't too wide for the page
+// This is outside of the above scope because it is also shown on non-organized pages
+@include media-breakpoint-down(md) {
+  .extended-col-info {
+    line-height: 1.25;
+    display: inline-block;
+  }
+
+  .msgbikelink {
+    display: block;
+  }
+
+  .hidden-sm-cells {
+    display: none;
   }
 }
