--- a/app/views/bikes/_organized_access_panel.html.haml
+++ b/app/views/bikes/_organized_access_panel.html.haml
@@ -192,11 +192,11 @@
       Parking notifications
 
     - if parking_notifications.any?
-      = render partial: "/organized/parking_notifications/table", locals: { parking_notifications: parking_notifications.limit(4), skip_bike: true, skip_map_cell: true, organization: passive_organization }
+      = render partial: "/organized/parking_notifications/table", locals: { parking_notifications: parking_notifications.limit(4), skip_bike: true, skip_map_cell: true, render_address: true }
 
       %p{ style: "margin-top: -12px;" }
-        = number_with_delimiter(parking_notifications.count)
-        total notifications for #{@bike.type} -
+        = pluralize number_with_delimiter(parking_notifications.count), "total notification"
+        for #{@bike.type} -
         %em
           = link_to "view all on map", organization_parking_notifications_path(organization_id: passive_organization.to_param, search_bike_id: @bike.id)
 
@@ -213,8 +213,8 @@
       - unless parking_notification_present
         / We only want to assign is_repeat if creating a new parking notification
         - @parking_notification.is_repeat = @parking_notification.likely_repeat?
-        - @parking_notification.kind = @parking_notification.potential_initial_record&.kind
         - @parking_notification.set_location_from_organization
+      - @parking_notification.kind ||= @parking_notification.potential_initial_record&.kind || ParkingNotification.kinds.first
 
       = form_for @parking_notification, url: organization_parking_notifications_path(organization_id: passive_organization) do |f|
         = f.hidden_field :bike_id
@@ -229,8 +229,8 @@
                 First notice
               %label.btn.btn-secondary{ class: (@parking_notification.is_repeat ? "active" : ""), disabled: !@parking_notification.can_be_repeat? }
                 = f.radio_button :is_repeat, true
-                Follows the
-                = pluralize @parking_notification.earlier_bike_notifications.count, "earlier notification"
+                -# We have to add 1 on the repeat because this hasn't been created yet
+                Repeat ##{@parking_notification.earlier_bike_notifications.count} of earlier notification
 
         .row.mt-4
           .col-md-6
@@ -239,14 +239,14 @@
               = f.text_area :message, placeholder: "Optional", class: 'form-control'
           .col-md-6
             .form-group
-              %p{ style: "margin-bottom: 0;" } Notification Kind
+              %p{ style: "margin-bottom: 0;" } Notification because
               - passive_organization.parking_notification_kinds.each do |kind|
                 %label.radio-inline.mr-2
                   = f.radio_button :kind, kind
                   = ParkingNotification.kinds_humanized[kind.to_sym]
 
         .form-group.text-center.mt-4
-          = submit_tag "Create parking notification", class: "btn btn-success parkingLocation-submit-btn", disabled: true
+          = submit_tag "Create parking notification!", class: "btn btn-success parkingLocation-submit-btn", disabled: true
 
         .row.mt-4
           .col-md-6#choseLocationMethod
@@ -263,11 +263,6 @@
                   Enter address manually
 
             .address-fields.related-fields.collapse
-              .form-group.fancy-select.unfancy.ifManualRequired#us_id_data{ data: { usid: Country.united_states.id } }
-                = f.select(:country_id, Country.select_options,
-                  { prompt: t(".choose_country") },
-                  { class: 'country-select-input form-control' } )
-
               .form-group.ifManualRequired
                 = f.text_field :street, placeholder: t(".address_or_intersection"), class: "form-control"
 
@@ -279,6 +274,10 @@
 
               .form-group.fancy-select-placeholder.unfancy.hidden-other{ class: (@parking_notification.country_id == Country.united_states.id ? "unhidden" : "") }
                 = f.collection_select(:state_id, State.all, :id, :name, { include_blank: true, prompt: t(".state") }, { class: "form-control" })
+              .form-group.fancy-select.unfancy.ifManualRequired#us_id_data{ data: { usid: Country.united_states.id } }
+                = f.select(:country_id, Country.select_options,
+                  { prompt: t(".choose_country") },
+                  { class: 'country-select-input form-control' } )
           .col-md-6
             .form-group.less-strong
               = f.label :internal_notes, t(".parking_notification_notes_html", org_name: passive_organization.short_name)
