--- a/app/views/organized/parking_notifications/index.html.haml
+++ b/app/views/organized/parking_notifications/index.html.haml
@@ -1,18 +1,49 @@
 .organized-page-header
-  %h1= t(".parking_notifications")
+  %h1
+    = t(".parking_notifications")
+
+- # TODO: add translations
 
 .organized-records
+  .text-right.mb-4
+    = link_to "Parking notification for unregistered bike", new_organization_bike_path(organization_id: current_organization, kind: "abandoned"), class: "btn btn-sm btn-outline-primary"
+
   #map
 
-  - # TODO: add translations
-  .row
-    .col-xs-12.text-center
-      = link_to "record unregistered abandoned bike", new_organization_bike_path(organization_id: current_organization, kind: "abandoned")
 
-    .col-md-8
-      = pluralize number_with_delimiter(matching_parking_notifications.count), "Abandoned record"
+  = render partial: "/shared/period_select", locals: { skip_submission: true }
 
+  .mt-4
+    = form_tag organization_parking_notifications_path(organization_id: current_organization.to_param), id: 'bikes_search_form', class: 'bikes-search-form', method: :get do
+      .query-field-wrap.nojs
+        - opt_vals = @selected_query_items_options.map { |i| i.is_a?(String) ? [i, i] : [i['text'], i['search_id']]  }
+        = select_tag :query_items,                                      |
+          options_for_select(opt_vals, selected: opt_vals.map(&:last)), |
+          placeholder: t(".search_bike_descriptions"),                  |
+          class: 'form-control query-field',                            |
+          multiple: true
+
+        = text_field_tag :query, params[:query], placeholder: t(".search_bike_descriptions"), class: 'form-control query-field'
+        .sidebyside-queries
+          = text_field_tag :email, params[:email], placeholder: t(".search_owner_email"), class: 'form-control query-field email-field-too'
+          = text_field_tag :serial, params[:serial], placeholder: t(".search_for_serial_number"), class: 'form-control query-field email-field-too'
+
+      .search-button-wrap
+        = button_tag(type: 'submit', class: 'searchit btn btn-primary') do
+          :plain
+            <svg id="search-button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 29 29"><defs><style>.cls-1,.cls-2{fill:none;stroke:#fff;stroke-miterlimit:10;stroke-width:2px;}.cls-2{stroke-linecap:round;}</style></defs><title>searcher</title><circle class="cls-1" cx="10.39" cy="10.39" r="9.39"/><line class="cls-2" x1="17.03" y1="17.03" x2="28" y2="28"/></svg>
+      = hidden_field_tag :stolenness, @stolenness
+      = hidden_field_tag :organization_id, passive_organization&.to_param
+
+      = hidden_field_tag :period, params[:period]
+      = hidden_field_tag :start_time, params[:start_time]
+      = hidden_field_tag :end_time, params[:end_time]
+
+  .row.mt-2
+    .col-md-12
       - if search_params_present?
+        = pluralize number_with_delimiter(matching_parking_notifications.count), "parking notification"
+
         - if params[:search_bike_id].present?
           for
           - searched_bike = Bike.find_by_id(params[:search_bike_id])
@@ -21,13 +52,15 @@
           - else
             %em
               unknown bike ##{params[:search_bike_id]}
-      - else
-        total
-    .col-md-4
+
+    .col-xs-6.mt-2
+      %p#recordsTotalCount
+        %span.number 0
+        total matches
+    .col-xs-6.mt-2
       %p#recordsCount.text-right.less-strong
         %span.number 0
         = t(".matches_visible")
-
 
   = render partial: "/organized/parking_notifications/table", locals: { parking_notifications: [] }
 
