--- a/app/views/organized/parking_notifications/show.html.haml
+++ b/app/views/organized/parking_notifications/show.html.haml
@@ -3,31 +3,63 @@
     = t(".parking_notification")
 
 - # TODO: add translations
-%table.table-list
-  %tbody
-    %tr
-      %td= t(".created")
-      %td
-        %span.convertTime
-          = l(@parking_notification.created_at, format: :convert_time)
-    %tr
-      %td= t(".by")
-      %td= @parking_notification.user.display_name
-    %tr
-      %td Kind
-      %td= @parking_notification.kind_humanized
-    %tr
-      %td= t(".bike")
-      %td
-        - if @bike.present?
-          = link_to organized_bike_text(@bike), bike_path(@bike)
-    %tr
-      %td= t(".message")
-      %td= @parking_notification.message
-    %tr
-      %td= t(".internal_notes_html", org_name: current_organization.short_name)
-      %td= @parking_notification.internal_notes
-
+.row
+  .col-md-6
+    %table.table-list
+      %tbody
+        %tr
+          %td= t(".created")
+          %td
+            %span.convertTime
+              = l(@parking_notification.created_at, format: :convert_time)
+        %tr
+          %td= t(".by")
+          %td= @parking_notification.user.display_name
+        %tr
+          %td Kind
+          %td= @parking_notification.kind_humanized
+        %tr
+          %td= t(".bike")
+          %td
+            - if @bike.present?
+              = link_to organized_bike_text(@bike), bike_path(@bike)
+              %br
+              %small
+                = link_to "view all notifications for #{@bike.type}", organization_parking_notifications_path(organization_id: current_organization.to_param, search_bike_id: @bike.id), class: "gray-link"
+        %tr
+          %td= t(".address")
+          %td= address_formatted(@parking_notification)
+  .col-md-6
+    %table.table-list
+      %tbody
+        %tr
+          %td Accuracy
+          %td
+            - if @parking_notification.accuracy.present?
+              = @parking_notification.accuracy
+            - if @parking_notification.location_from_address
+              From address
+            %small.less-strong developer info
+        %tr
+          %td= t(".repeat")
+          %td
+            - if @parking_notification.initial_record?
+              %span.less-strong Initial notification
+            - else
+              \ ##{@parking_notification.repeat_number}
+              %em.small.less-strong.ml-2
+                first notification on
+                %a.convertTime{ href: organization_parking_notification_path(@parking_notification.initial_record_id, organization_id: current_organization.to_param) }
+                  - if @parking_notification.initial_record.present?
+                    = l(@parking_notification.initial_record.created_at, format: :convert_time)
+                  - else
+                    = @parking_notification.initial_record_id
+        %tr
+          %td= t(".message")
+          %td= @parking_notification.message
+        %tr
+          %td= t(".internal_notes")
+          %td= @parking_notification.internal_notes
 
 #map_canvas{ style: "height: 400px;" }
 
@@ -56,3 +88,10 @@
       google.maps.event.addDomListener(window, "load", initialize);
     });
   </script>
+
+
+- if @related_notifications.any?
+  %h3{ style: "margin-top: 60px;" }
+    Related Notifications
+  = render partial: "/organized/parking_notifications/table", locals: { parking_notifications: @related_notifications, skip_bike: true, skip_map_cell: true }
+
