--- a/app/views/organized/bikes/recoveries.html.haml
+++ b/app/views/organized/bikes/recoveries.html.haml
@@ -35,8 +35,12 @@
       %tr
         %td
           - if recovered_record.recovered_at.present?
-            %a.convertTime{ href: bike_path(bike) }
-              = l recovered_record.recovered_at, format: :convert_time
+            - if bike.present?
+              %a.convertTime{ href: bike_path(bike) }
+                = l recovered_record.recovered_at, format: :convert_time
+            - else
+              %span.convertTime
+                = l recovered_record.recovered_at, format: :convert_time
           - if display_recovery_ids
             %small
               = link_to recovered_record.id, admin_recovery_path(recovered_record.id), class: "less-strong", style: "color: #6c757d"
@@ -51,13 +55,17 @@
 
         %td
           %small
-            = [bike.mnfg_name, bike.frame_model].select(&:present?).join(", ")
-            %span.less-strong
-              = bike.frame_colors.to_sentence
+            - if bike.present?
+              = [bike.mnfg_name, bike.frame_model].select(&:present?).join(", ")
+              %span.less-strong
+                = bike.frame_colors.to_sentence
+            - else
+              Bike hidden/removed
         - if @search_only_organization
           %td
-            %small
-              = bike.owner_email
+            - if bike.present?
+              %small
+                = bike.owner_email
 
 .paginate-container.paginate-container-bottom
   = paginate @recoveries
