--- a/app/views/landing_pages/cities_packages.html.haml
+++ b/app/views/landing_pages/cities_packages.html.haml
@@ -14,7 +14,7 @@
     { free: true, supporting: true, small: true, medium: true, large: true,  title: t("plan_features.embed_a_registration_form") },
     { free: false, supporting: true, small: true, medium: true, large: true,  title: t("plan_features.search_bikes_in_organization") },
     { free: false, supporting: true, small: true, medium: true, large: true,  title: t("plan_features.import_csv_file") },
-    { free: false, supporting: true, small: true, medium: true, large: true,  title: t("plan_features.welcome_campaign") },
+    { free: false, supporting: true, small: true, medium: true, large: true,  title: t("plan_features.organization_dashboard") },
     { free: "10", supporting: "10", small: "10", medium: "unlimited", large: "unlimited", title: t("plan_features.staff_accounts") },
     { free: false, supporting: false, small: true, medium: true, large: true,  title: t("plan_features.landing_page") },
     { free: false, supporting: false, small: true, medium: true, large: true,  title: t("plan_features.qr_sticker") },
