--- a/app/views/landing_pages/campus_packages.html.haml
+++ b/app/views/landing_pages/campus_packages.html.haml
@@ -10,10 +10,10 @@
   }
   plan_sizes = plans.keys
   plan_features = [
-    { free: true, supporting: true, small: true, medium: true, large: true, title: t("plan_features.supporting_our_nonprofit") },
     { free: true, supporting: true, small: true, medium: true, large: true, title: t("plan_features.create_organization_account") },
     { free: true, supporting: true, small: true, medium: true, large: true, title: t("plan_features.embed_a_registration_form") },
     { free: false, supporting: true, small: true, medium: true, large: true, title: t("plan_features.search_bikes_in_organization") },
+    { free: false, supporting: true, small: true, medium: true, large: true, title: t("plan_features.abandoned_bike_suite") },
     { free: false, supporting: true, small: true, medium: true, large: true, title: t("plan_features.import_csv_file") },
     { free: "10", supporting: "10", small: "10", medium: "unlimited", large: "unlimited", title: t("plan_features.staff_accounts") },
     { free: false, supporting: false, small: true, medium: true, large: true, title: t("plan_features.landing_page") },
