update for cities page

--- a/app/views/landing_pages/for_cities.html.haml
+++ b/app/views/landing_pages/for_cities.html.haml
@@ -34,6 +34,8 @@
         %h4= t(".related_articles")
         %ul
           %li
+            = link_to t(".bike_index_new_dashboard"), news_path("portland-implements-bike-indexs-new-law-enforcement-dashboard")
+          %li
             = link_to t(".bike_index_unveils_partnership_with_the_c"), news_path("bike-index-unveils-new-qr-stickers-and-partnership-with-the-city-of-pa")
 
         .trusted-by.hidden-lg-up
