--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -66,7 +66,7 @@
                     - bulk_link_name = passive_organization.ascend_imports? ? "Ascend Imports" : "Bulk Imports"
                     = active_link bulk_link_name, organization_bulk_imports_path(organization_id: passive_organization.to_param), match_controller: true, class: "nav-link"
                 - if passive_organization.lightspeed_pos?
-                  = active_link t(".lightspeed_integration_panel"), lightspeed_interface_path, class: "nav-link"
+                  = active_link t(".lightspeed_integration_panel"), lightspeed_interface_path(organization_id: passive_organization&.id), class: "nav-link"
                 - if passive_organization.enabled?("parking_notifications")
                   %li.divider-nav-item
                   %li
