--- a/app/views/admin/organizations/show.html.haml
+++ b/app/views/admin/organizations/show.html.haml
@@ -171,7 +171,7 @@
                 %li
                   = link_to regiona_parent.name, admin_organization_path(regiona_parent)
 
-  - if @organization.bike_shop?
+  - if @organization.bike_shop? || @organization.any_pos?
     .col-md-6
       %table.table-list
         %tr
