--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -63,7 +63,7 @@
 
                 - if passive_organization.show_bulk_import?
                   %li
-                    - bulk_link_name = passive_organization.ascend_imports? ? "Ascend Imports" : "Bulk Imports"
+                    - bulk_link_name = passive_organization.ascend_pos? ? "Ascend Imports" : "Bulk Imports"
                     = active_link bulk_link_name, organization_bulk_imports_path(organization_id: passive_organization.to_param), match_controller: true, class: "nav-link"
                 - if passive_organization.lightspeed_pos?
                   = active_link t(".lightspeed_integration_panel"), lightspeed_interface_path(organization_id: passive_organization&.id), class: "nav-link"
