--- a/app/views/shared/_organized_skeleton.html.haml
+++ b/app/views/shared/_organized_skeleton.html.haml
@@ -50,7 +50,7 @@
 
         - if current_organization.show_bulk_import?
           %li
-            - bulk_link_name = current_organization.ascend_imports? ? t(".ascend_imports") : t(".bulk_imports")
+            - bulk_link_name = current_organization.ascend_pos? ? t(".ascend_imports") : t(".bulk_imports")
             = active_link bulk_link_name, organization_bulk_imports_path(organization_id: current_organization.to_param), match_controller: true, class: "menu-item"
         - if current_organization.lightspeed_pos?
           = active_link t(".lightspeed_integration_panel"), lightspeed_interface_path(organization_id: passive_organization&.id), class: "menu-item"
