--- a/app/views/admin/payments/index.html.haml
+++ b/app/views/admin/payments/index.html.haml
@@ -8,14 +8,12 @@
         = link_to "New payment", new_admin_payment_url, class: "nav-link"
       %li.nav-item
         = link_to "graph", admin_payments_path(sortable_search_params.merge(render_chart: !@render_chart)), class: "nav-link #{@render_chart ? 'active' : ''}"
-
 :ruby
   payments_counts = Payment.kinds.map do |kind|
-    # TODO: Refactor to incorporate Rails 5 enum changes
-    payment_enum = Payment::KIND_ENUM[kind.to_sym]
-    payments_of_kind = matching_payments.where(kind: payment_enum)
+    payments_of_kind = matching_payments.where(kind: kind)
     next unless payments_of_kind.count > 0
     {
+      kind: kind,
       name: Payment.display_kind(kind),
       data: time_range_counts(collection: payments_of_kind),
       data_money: time_range_amounts(collection: payments_of_kind),
@@ -30,16 +28,15 @@
   %h4.mt-2 Amounts
   = column_chart payments_counts.map { |c| { name: c[:name], data: c[:data_money] } }, stacked: true, thousands: ",", prefix: "$", round: 2, defer: true
 
-.col-12.mb-4.mt-2
-  .row.justify-content-end
-    = render partial: "/shared/period_select"
+
+= render partial: "/shared/period_select"
 
 .row.mb-4
   .col-sm
     %h4.mt-2
       = pluralize(number_with_delimiter(matching_payments.count), "matching payment")
       %small
-        for
+        for a total of
         = Payment.money_formatted(matching_payments.sum(:amount_cents))
   - if payments_counts.present?
     .col-sm
@@ -51,13 +48,15 @@
                 = payment_count[:name].pluralize
                 - if params[:search_kind].present?
                   = link_to "view all kinds", admin_payments_path(sortable_search_params.merge(search_kind: "")), class: "small em"
-                - elsif payments_counts.count > 1
-                  = link_to "view", admin_payments_path(sortable_search_params.merge(search_kind: params[:search_kind])), class: "small em"
+                - else
+                  = link_to "view", admin_payments_path(sortable_search_params.merge(search_kind: payment_count[:kind])), class: "small em"
           %tbody
             %tr
               - payments_counts.each do |payment_count|
                 %td
-                  #{number_with_delimiter(payment_count[:count])} - #{payment_count[:money]}
+                  %em.less-strong
+                    #{number_with_delimiter(payment_count[:count])} -
+                  #{payment_count[:money]}
                   - if payment_count[:name] == "payment" && payment_count[:count] > 0
                     %br
                     %small.text-warning There shouldn't be payments without invoices
