--- a/app/views/organized/exports/index.html.haml
+++ b/app/views/organized/exports/index.html.haml
@@ -5,7 +5,7 @@
   .text-right
     = link_to t(".new_export"),
     new_organization_export_path(organization_id: current_organization.to_param),
-    class: "btn btn-secondary pull-right"
+    class: "btn btn-secondary"
 
   .full-screen-table.mt-4
     %p{ style: "margin-bottom: 0;" }
