--- a/app/views/organized/bikes/_search.html.haml
+++ b/app/views/organized/bikes/_search.html.haml
@@ -61,7 +61,7 @@
     "owner_email_cell" => "Sent to",
     "owner_name_cell" => "Owner name",
     "reg_affiliation_cell" => "Affiliation",
-    "reg_secondary_serial_cell" => "Secondary#",
+    "additional_registration_cell" => "Secondary#",
     "reg_phone_cell" => "Phone",
     "reg_address_cell" => "Address",
     "sticker_cell" => "Sticker",
@@ -186,7 +186,7 @@
               %td.hiddenColumn.hidden-xs-down{ class: "#{field_name}_cell" }
                 - if field_name == "reg_address"
                   = bike.b_params.map { |bp| bp.bike["address"] }.reject(&:blank?).first
-                - elsif field_name == "reg_secondary_serial"
+                - elsif field_name == "additional_registration"
                   = bike.additional_registration
                 - elsif field_name == "phone"
                   = bike.phone
