--- a/app/views/bikes/new.html.haml
+++ b/app/views/bikes/new.html.haml
@@ -134,13 +134,13 @@
                     { include_blank: true, required: true, prompt: t(".state") },
                     { class: "form-control" })
 
-          - if @organization&.include_field_additional_registration?(current_user)
+          - if @organization&.include_field_extra_registration_number?(current_user)
             .form-group.row.unnested-field.no-divider-row
-              = f.label :additional_registration,
-                @organization.registration_field_label("additional_registration") || t(".additional_serial_sticker_number"),
+              = f.label :extra_registration_number,
+                @organization.registration_field_label("extra_registration_number") || t(".additional_serial_sticker_number"),
                 class: "form-well-label"
               .form-well-input
-                = f.text_field :additional_registration,
+                = f.text_field :extra_registration_number,
                   autocomplete: "off",
                   autocorrect: "off",
                   autocapitalize: "off",
