update with additional rename

--- a/app/views/bikes/_organized_access_panel.html.haml
+++ b/app/views/bikes/_organized_access_panel.html.haml
@@ -125,7 +125,7 @@
                           = @bike.extra_registration_number
                         - elsif reg_field == "phone"
                           = @bike.phone
-                        - elsif reg_field == "reg_affiliation"
+                        - elsif reg_field == "organization_affiliation"
                           = @bike.organization_affiliation
 
                 - if passive_organization.enabled?("avery_export")
