--- a/app/views/bikes/new.html.haml
+++ b/app/views/bikes/new.html.haml
@@ -146,14 +146,14 @@
                   autocapitalize: "off",
                   class: "form-control"
 
-          - if @organization&.include_field_reg_affiliation?(current_user)
+          - if @organization&.include_field_organization_affiliation?(current_user)
             .form-group.row.unnested-field.no-divider-row.fancy-select.unfancy
               = f.label :organization_affiliation,
-                @organization.registration_field_label("reg_affiliation") || t(".affiliation", org_name: @organization.short_name),
+                @organization.registration_field_label("organization_affiliation") || t(".affiliation", org_name: @organization.short_name),
                 class: "form-well-label"
               .form-well-input
                 = f.select :organization_affiliation,
-                  @organization.reg_affiliation_options,
+                  @organization.organization_affiliation_options,
                   class: "form-control"
 
           .form-group.row.unnested-field.no-divider-row
