manually set POS kind

--- a/app/views/admin/organizations/_form.html.haml
+++ b/app/views/admin/organizations/_form.html.haml
@@ -43,14 +43,17 @@
         = f.text_field :previous_slug, class: "form-control"
 
 .row
-  .col-md-6.pl-4
+  .col-md-6
     .form-group#js-organization-type
-      %label
-      Organization Type
-      - Organization.kinds.each do |kind|
-        .form-check
-          = f.radio_button "kind", kind, class: "form-check-input"
-          = f.label "kind_#{kind}", kind.humanize, class: "form-check-label"
+      %strong
+        %label
+          Organization Type
+      .row
+        - Organization.kinds.each do |kind|
+          .col-6
+            .form-check
+              = f.radio_button "kind", kind, class: "form-check-input"
+              = f.label "kind_#{kind}", kind.humanize, class: "form-check-label"
 
   .col-md-6
     .form-group
@@ -77,6 +80,22 @@
     .form-group
       = f.check_box :approved
       = f.label :approved, 'Validated & approved'
+
+  - if current_user.developer?
+    .col-md-6.mt-4
+      %label.less-strong.d-block
+        Manually set POS kind
+        %span.text-danger
+          Warning - you can break things here!
+      .form-check.form-check-inline
+        = f.radio_button "manual_pos_kind", nil, class: "form-check-input"
+        %strong
+          = f.label "manual_pos_kind", "not set", class: "form-check-label"
+      - Organization.pos_kinds.each do |pos_kind|
+        .form-check.form-check-inline.small
+          = f.radio_button "manual_pos_kind", pos_kind, class: "form-check-input"
+          = f.label "manual_pos_kind_#{pos_kind}", pos_kind.humanize, class: "form-check-label"
+      .mb-4
 
 .row
   .col-md-6
